# vimba_invalid_pointer

./: .gitignore  README.md
catkin_ws/camera/: CMakeLists.txt  main.launch  package.xml
catkin_ws/camera/src/: node.cpp
catkin_ws/vimba/: CMakeLists.txt  package.xml
catkin_ws/vimba/VimbaCPP/Source/: Version.h
catkin_ws/vimba/lib/: VimbaC.xml
