<?xml version="1.0"?>
<package format="2">
  <name>camera</name>
  <version>0.0.0</version>
  <description>The camera package</description>

  <maintainer email="rufus@todo.todo">rufus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>vimba</depend>

  <export>
  </export>
</package>
